# QRAM-Simulator

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: cmake-multi-platform.yml  pypi-publish.yml
Common/include/: matrix.h  random_engine.h
PySparQ/: CMakeLists.txt  __init__.py  core.cpp
PySparQ/dynamic_operator/: __init__.py  compiler.py
PySparQ/dynamic_operator/include/: dynamic_operator_loader.h
PySparQ/pysparq/: __init__.py  _core.pyi
PySparQ/pysparq/algorithms/: __init__.py  cks_solver.py  grover.py  qda_solver.py  shor.py
PySparQ/pysparq/dynamic_operator/: compiler.py
PySparQ/pysparq/dynamic_operator/src/: dynamic_operator_loader.cpp
PySparQ/test/: __init__.py  test_dynamic_operator.py
SparQ/include/: basic_gates.h
SparQ/test/: CMakeLists.txt  basic_gates.cpp  qft.cpp  quantum_arithmetic.cpp  test_dynamic_operator.cpp
SparQ_Algorithm/src/: CMakeLists.txt
cmake/: CUDA.cmake  QRAMSimulatorConfig.cmake.in
docs/: pysparq.md
examples/: CMakeLists.txt  basic_gates.cpp  dynamic_operator_example.py  grover_search.cpp  hello_qram.cpp
python/: genindex.html  index.html  py-modindex.html  search.html  searchindex.js
python/_modules/: index.html
python/_modules/PySparQ/: pysparq.html
python/_modules/PySparQ/pysparq/: dynamic_operator.html
python/api/: index.html  python.html
python/autoapi/PySparQ/pysparq/: index.html
python/guide/: examples.html  installation.html  quickstart.html
python/guide/algorithms/: cks_solver.html  grover.html  index.html  qda_solver.html  shor.html
python/notebooks/: 01_快速入门.ipynb  02_稀疏态演化.ipynb  03_算子示例.ipynb
test/CPUTest/CommonTest/: CMakeLists.txt
test/CPUTest/QASMTest/: displayTest.h
(+14 files in other folders)
